--- a/compose.html
+++ b/compose.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Lenis Smooth Scroll -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lenis@1.2.3/dist/lenis.css">
@@ -1007,12 +1008,12 @@
     }
   }
 
-  /* 描述文字 - Sora 细体，减小字号 */
+  /* 描述文字 - Sora Regular 16px */
   .compose-description {
     font-family: 'Sora', sans-serif;
     width: 48%;
-    font-size: clamp(0.85rem, 1.5vw, 1rem);
-    font-weight: 300;
+    font-size: clamp(1rem, 1.5vw, 1rem);
+    font-weight: 400;
     line-height: 1.6;
     color: var(--color-text);
     margin-bottom: var(--spacing-lg);
@@ -1070,7 +1071,7 @@
     }
 
     .compose-description {
-      font-size: clamp(0.8rem, 2vw, 0.95rem);
+      font-size: 1rem;
       margin-bottom: var(--spacing-md);
     }
   }
@@ -1103,7 +1104,7 @@
     }
 
     .compose-description {
-      font-size: clamp(0.75rem, 2.5vw, 0.85rem);
+      font-size: 1rem;
       line-height: 1.5;
       margin-bottom: var(--spacing-md);
     }
@@ -1310,8 +1311,8 @@
 
   .workflow-cmps-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
@@ -1319,8 +1320,8 @@
   }
 
   .workflow-cmps-title {
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 2.8rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     color: var(--color-text);
@@ -1329,7 +1330,7 @@
 
   .workflow-cmps-description {
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     color: var(--color-text-secondary);
