--- a/sections/APIs/APIs.html
+++ b/sections/APIs/APIs.html
@@ -14,23 +14,23 @@
 }
 
 .apis-label {
-  font-size: 1.25rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   letter-spacing: 0.1em;
   color: var(--color-text-secondary);
   margin-bottom: var(--spacing-sm);
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .apis-title {
-  font-size: 2.6rem;
-  font-weight: 800;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   margin-bottom: var(--spacing-md);
   line-height: 1.1;
   color: #ffffff;
 }
 
 .apis-description {
-  font-size: 1.45rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   color: var(--color-text-secondary);
   line-height: 1.6;
   max-width: 1000px;
@@ -169,7 +169,7 @@
 }
 
 .api-title {
-  font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   margin-bottom: -6px;
   color: var(--color-text);
@@ -177,7 +177,7 @@
 }
 
 .api-description {
-  font-size: 1.3rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   color: rgba(255, 255, 255, 0.9);
   line-height: 1.5;
 }
@@ -199,11 +199,11 @@
   }
 
   .apis-title {
-    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .apis-description {
-    font-size: 1.2rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   /* 所有卡片按比例缩小 60% */
@@ -279,11 +279,11 @@
 
   /* 缩小文字 */
   .api-title {
-    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .api-description {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .api-overlay {
@@ -307,11 +307,11 @@
   }
 
   .apis-title {
-    font-size: 1.8rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .apis-description {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   /* 所有卡片按比例缩小 40% */
@@ -387,11 +387,11 @@
 
   /* 移动端文字进一步缩小 */
   .api-title {
-    font-size: 0.9rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .api-description {
-    font-size: 0.75rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     line-height: 1.4;
   }
 
@@ -411,11 +411,11 @@
   }
 
   .apis-title {
-    font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .apis-description {
-    font-size: 0.95rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .api-card:nth-child(1) {
@@ -489,11 +489,11 @@
   }
 
   .api-title {
-    font-size: 0.85rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .api-description {
-    font-size: 0.7rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     line-height: 1.35;
   }
 
