--- a/sections/ai_creative_suite/ai_creative_suite.html
+++ b/sections/ai_creative_suite/ai_creative_suite.html
@@ -21,16 +21,16 @@
 
   .ai-creative-suite-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.25rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
     margin-bottom: var(--spacing-sm);
-    font-weight: 300;
+    font-weight: 400;
   }
 
   .ai-creative-suite-title {
-    font-size: clamp(2rem, 5vw, 3.5rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     color: var(--color-text);
     margin-bottom: var(--spacing-3xl);
@@ -126,15 +126,15 @@
 
   .ai-creative-suite-content-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.2rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
-    font-weight: 300;
+    font-weight: 400;
   }
 
   .ai-creative-suite-content-title {
-    font-size: clamp(1.5rem, 3vw, 2.0rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     color: var(--color-text);
     line-height: 1.3;
@@ -198,7 +198,7 @@
     }
 
     .ai-creative-suite-title {
-      font-size: clamp(1.5rem, 6vw, 2.5rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .ai-creative-suite-content {
@@ -206,7 +206,7 @@
     }
 
     .ai-creative-suite-content-title {
-      font-size: clamp(1.25rem, 4vw, 2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .ai-creative-suite-button {
