--- a/sections/ai_solutions/ai_solutions.html
+++ b/sections/ai_solutions/ai_solutions.html
@@ -33,9 +33,9 @@
 
   /* 像素风格字体 - Press Start 2P 字体已在全局 head 中引入 */
   .ai-solutions-title {
-    font-family: 'Press Start 2P', cursive;
-    font-size: clamp(1.2rem, 4vw, 2.5rem);
-    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     color: var(--color-text);
     line-height: 1.8;
     margin-bottom: var(--spacing-lg);
@@ -55,7 +55,7 @@
 
   .ai-solutions-subtitle {
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1rem, 1.8vw, 0.75rem);
+    font-size: clamp(1rem, 2vw, 1.5rem);
     color: var(--color-text-secondary);
     line-height: 1.8;
     max-width: 50%;
@@ -174,7 +174,7 @@
     }
 
     .ai-solutions-title {
-      font-size: clamp(1rem, 5vw, 2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
       max-width: 80%;
       white-space: normal;
       margin-bottom: var(--spacing-md);
@@ -182,7 +182,7 @@
     }
 
     .ai-solutions-subtitle {
-      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
       max-width: 75%;
       padding: 0;
       margin-top: var(--spacing-sm);
@@ -210,7 +210,7 @@
     }
 
     .ai-solutions-title {
-      font-size: clamp(0.8rem, 6vw, 1.5rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
       max-width: 80%;
       white-space: normal;
       line-height: 1.6;
@@ -219,7 +219,7 @@
     }
 
     .ai-solutions-subtitle {
-      font-size: clamp(0.85rem, 3vw, 1rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
       line-height: 1.7;
       max-width: 85%;
       padding: 0;
