--- a/sections/assistant/assistant.html
+++ b/sections/assistant/assistant.html
@@ -15,8 +15,8 @@
 }
 
 .assistant-section .section-label {
-  font-size: 1.2rem;  /* 增大小标题字体（原来 0.875rem）*/
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);  /* 增大小标题字体（原来 0.875rem）*/
+  font-weight: 400;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
@@ -226,15 +226,15 @@
 }
 
 .assistant-feature-title {
-  font-size: 1.5rem;  /* 进一步增大标题字体 */
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);  /* 进一步增大标题字体 */
   font-weight: 700;
   margin-bottom: var(--spacing-sm);  /* 增大间距 */
   line-height: 1.3;
 }
 
 .assistant-feature-description {
-  color: var(--color-text-secondary);
-  font-size: 1.3rem;  /* 进一步增大描述文字 */
+    font-family: 'Sora', sans-serif;color: var(--color-text-secondary);
+  font-size: clamp(1.125rem, 2vw, 1.75rem);  /* 进一步增大描述文字 */
   line-height: 1.6;
   word-break: keep-all;  /* 严格控制换行，保持单词完整 */
   overflow-wrap: break-word;  /* 超长单词才换行 */
@@ -391,7 +391,7 @@
   }
 
   .assistant-section .section-label {
-    font-size: 0.875rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   /* 网格间距减小 */
