--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -75,7 +75,7 @@
 }
 
 .banner-title {
-  font-size: clamp(1.75rem, 3.5vw, 3rem); /* 减小字体：从 2.5-4.5rem 改为 2-3.5rem */
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem); /* 减小字体：从 2.5-4.5rem 改为 2-3.5rem */
   font-weight: 700;
   line-height: 1.2; /* 设置行高 */
   color: var(--color-text);
@@ -86,7 +86,7 @@
 }
 
 .banner-subtitle {
-  font-size: clamp(0.875rem, 1.5vw, 1rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   line-height: 1.6;
   color: var(--color-text-secondary);
   margin: 0;
@@ -221,8 +221,8 @@
 
 /* 卡片标题（显示在卡片下方）*/
 .card-title {
-  font-size: 0.6rem; /* 减小字体：从 0.75rem 改为 0.65rem */
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem); /* 减小字体：从 0.75rem 改为 0.65rem */
+  font-weight: 700;
   color: var(--color-text);
   text-align: left; /* 左侧对齐 */
   letter-spacing: 0.05em;
@@ -304,7 +304,7 @@
   /* 标题和副标题居中 */
   .banner-title,
   .banner-subtitle {
-    text-align: center;
+    font-family: 'Sora', sans-serif;text-align: center;
     margin-left: auto;
     margin-right: auto;
   }
@@ -416,13 +416,13 @@
   }
 
   .banner-title {
-    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     max-width: 100%;
     text-align: center;
   }
 
   .banner-subtitle {
-    font-size: 0.875rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     max-width: 100%;
     text-align: center;
   }
@@ -472,7 +472,7 @@
   }
 
   .card-title {
-    font-size: 0.75rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 }
 
@@ -484,12 +484,12 @@
   }
 
   .banner-title {
-    font-size: clamp(1.5rem, 8vw, 1.75rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     text-align: center;
   }
 
   .banner-subtitle {
-    text-align: center;
+    font-family: 'Sora', sans-serif;text-align: center;
   }
 
   .btn-start {
@@ -511,7 +511,7 @@
   }
 
   .card-title {
-    font-size: 0.7rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 }
 
