--- a/sections/brand-control/brand-control.html
+++ b/sections/brand-control/brand-control.html
@@ -18,8 +18,8 @@
 
 /* 小标题 "BRAND CONTROL" */
 .brand-control__subtitle {
-  font-size: 1.2rem;
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 0.08em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
@@ -28,8 +28,8 @@
 
 /* 主标题 "Always On-Brand, Automatically" */
 .brand-control__title {
-  font-size: 2.8rem;
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   line-height: 1.2;
   color: var(--color-text);
   margin-bottom: 1rem;
@@ -37,7 +37,7 @@
 
 /* 描述文字 */
 .brand-control__description {
-  font-size: 1.45rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   line-height: 1.6;
   letter-spacing: 0.02em;
   color: var(--color-text-secondary);
@@ -113,7 +113,7 @@
 
 /* 卡片标题 */
 .brand-control__card-title {
-  font-size: 1.55rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   letter-spacing: 0.05em;
   color: var(--color-text);
@@ -122,8 +122,8 @@
 
 /* 卡片标签 */
 .brand-control__card-label {
-  font-size: 0.875rem;
-  font-weight: 500;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   color: var(--color-text);
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
   max-width: 70px;
@@ -218,7 +218,7 @@
   }
 
   .brand-control__card-title {
-    font-size: 1.75rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 }
 
@@ -241,26 +241,26 @@
   }
 
   .brand-control__card-title {
-    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .brand-control__card-label {
-    font-size: 0.75rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     padding: 0.4rem 0.875rem;
   }
 }
 
 @media (max-width: 479px) {
   .brand-control__title {
-    font-size: 1.75rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .brand-control__description {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .brand-control__card-title {
-    font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .brand-control__cta-button {
