--- a/sections/built_for_speed/built_for_speed.html
+++ b/sections/built_for_speed/built_for_speed.html
@@ -53,8 +53,8 @@
 
   .built-for-speed-title {
     color: var(--color-text);
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 3.5rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     margin: 0;
@@ -66,13 +66,13 @@
   }
 
   .built-for-speed-header-section .built-for-speed-title {
-    color: var(--color-text);
+    font-family: 'Poppins', sans-serif;color: var(--color-text);
   }
 
   .built-for-speed-subtitle {
     color: var(--color-text);
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1.125rem, 2vw, 1.5rem);
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-weight: 400;
     line-height: 1.6;
     margin: 0;
@@ -82,7 +82,7 @@
   .built-for-speed-description {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     margin: 0;
