--- a/sections/calculator/calculator.html
+++ b/sections/calculator/calculator.html
@@ -19,7 +19,8 @@
   }
 
   .calculator-title {
-    font-size: clamp(2rem, 5vw, 3.5rem);
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     color: var(--color-text);
     margin-bottom: var(--spacing-md);
@@ -29,7 +30,7 @@
   .calculator-subtitle {
     font-family: 'Sora', sans-serif;
     font-size: clamp(1rem, 2vw, 1.5rem);
-    font-weight: 300;
+    font-weight: 400;
     color: var(--color-text-secondary);
     line-height: 1.6;
     max-width: 900px;
@@ -309,7 +310,7 @@
   }
 
   .calculator-result-label {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     color: var(--color-text-secondary);
     line-height: 1.5;
   }
