--- a/sections/explore_more/explore_more.html
+++ b/sections/explore_more/explore_more.html
@@ -31,9 +31,9 @@
 }
 
 .explore-label {
-  display: inline-block;
-  font-size: 19px;
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;display: inline-block;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 0px;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.5);
@@ -41,7 +41,7 @@
 }
 
 .explore-title {
-  font-size: 43px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   line-height: 1.2;
   color: #FFFFFF;
@@ -182,11 +182,11 @@
 
 /* 卡片标签 */
 .explore-card-label {
-  position: absolute;
+    font-family: 'Sora', sans-serif;position: absolute;
   bottom: 24px;
   left: 24px;
-  font-size: 18px;
-  font-weight: 600;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #FFFFFF;
@@ -195,7 +195,7 @@
 }
 
 .explore-card:hover .explore-card-label {
-  transform: translateY(-4px);
+    font-family: 'Sora', sans-serif;transform: translateY(-4px);
 }
 
 /* 响应式设计 - 平板 (768px - 991px) */
@@ -206,11 +206,11 @@
   }
 
   .explore-title {
-    font-size: 36px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .explore-label {
-    font-size: 16px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   /* 平板端: 缩小布局 60%，保持三卡一排 */
@@ -267,7 +267,7 @@
   }
 
   .explore-card-label {
-    font-size: 14px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     bottom: 16px;
     left: 16px;
   }
@@ -289,11 +289,11 @@
   }
 
   .explore-title {
-    font-size: 28px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .explore-label {
-    font-size: 14px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   /* 移动端: 缩小布局 40%，保持三卡一排 */
@@ -350,7 +350,7 @@
   }
 
   .explore-card-label {
-    font-size: 12px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     bottom: 12px;
     left: 12px;
   }
@@ -364,11 +364,11 @@
   }
 
   .explore-title {
-    font-size: 24px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .explore-label {
-    font-size: 12px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   /* 超小屏: 缩小布局 30%，保持三卡一排 */
@@ -425,7 +425,7 @@
   }
 
   .explore-card-label {
-    font-size: 10px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     bottom: 8px;
     left: 8px;
   }
