--- a/sections/styles/styles.html
+++ b/sections/styles/styles.html
@@ -213,8 +213,9 @@
 }
 
 .styles-label {
-  font-size: 1.05rem;
-  font-weight: 600;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
@@ -224,7 +225,8 @@
 }
 
 .styles-title {
-  font-size: 2.75rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   line-height: 1.1;
   color: var(--color-text);
@@ -234,7 +236,9 @@
 }
 
 .styles-description {
-  font-size: 1.45rem;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1.125rem, 2vw, 1.75rem);
+  font-weight: 300;
   line-height: 1.6;
   color: var(--color-text-secondary);
   margin: 0;
@@ -267,15 +271,15 @@
 }
 
 .styles-feature-title {
-  font-size: 1.5rem;  /* 从 1.25rem 增大到 1.5rem (24px) */
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);  /* 从 1.25rem 增大到 1.5rem (24px) */
+  font-weight: 700;
   line-height: 1.3;
   color: var(--color-text);
   margin: 0 0 var(--spacing-sm) 0;
 }
 
 .styles-feature-description {
-  font-size: 1.25rem;  /* 从 1.125rem 增大到 1.25rem (20px) */
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);  /* 从 1.125rem 增大到 1.25rem (20px) */
   line-height: 1.6;
   color: var(--color-text-secondary);
   margin: 0;
@@ -336,7 +340,9 @@
   }
 
   .styles-title {
-    font-size: 2.5rem;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   }
 
   .styles-features {
@@ -443,11 +449,15 @@
   }
 
   .styles-title {
-    font-size: 2rem;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   }
 
   .styles-description {
-    font-size: 1rem;
+  font-family: 'Sora', sans-serif;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
+  font-weight: 300;
     padding: 0 var(--spacing-sm);
   }
 
@@ -466,11 +476,11 @@
   }
 
   .styles-feature-title {
-    font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .styles-feature-description {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .styles-cta {
@@ -501,11 +511,15 @@
   }
 
   .styles-title {
-    font-size: 1.75rem;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   }
 
   .styles-description {
-    font-size: 0.9rem;
+  font-family: 'Sora', sans-serif;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
+  font-weight: 300;
   }
 
   .styles-gallery {
@@ -529,11 +543,11 @@
   }
 
   .styles-feature-title {
-    font-size: 1.125rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .styles-feature-description {
-    font-size: 0.875rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .styles-cta {
