--- a/sections/tools-showcase/tools-showcase.html
+++ b/sections/tools-showcase/tools-showcase.html
@@ -19,7 +19,7 @@
 }
 
 .tools-showcase__title {
-  font-size: 2.625rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   line-height: 1.2;
   margin-bottom: 0;
@@ -27,7 +27,7 @@
 }
 
 .tools-showcase__subtitle {
-  font-size: 1.2rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   color: var(--color-text-secondary);
   max-width: 600px;
   margin: 0 auto 16px;
@@ -288,7 +288,7 @@
   }
 
   .tools-showcase__title {
-    font-size: 2.5rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .tools-showcase__tabs {
@@ -356,12 +356,12 @@
   }
 
   .tools-showcase__title {
-    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     line-height: 1.2;
   }
 
   .tools-showcase__subtitle {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     margin-bottom: 12px;
   }
 
@@ -486,12 +486,12 @@
 @media (max-width: 479px) {
   /* 标题进一步缩小 */
   .tools-showcase__title {
-    font-size: 1.75rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     padding: 0 var(--spacing-sm);
   }
 
   .tools-showcase__subtitle {
-    font-size: 0.9375rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   /* 标签栏紧凑布局 */
