--- a/sections/workflow/workflow.html
+++ b/sections/workflow/workflow.html
@@ -17,8 +17,8 @@
 
 /* 小标题 "WORKFLOW" */
 .workflow__subtitle {
-  font-size: 1.2rem;
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
@@ -27,7 +27,7 @@
 
 /* 主标题 "A Seamless Creative Workflow" */
 .workflow__title {
-  font-size: 2.8rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   line-height: 1.2;
   color: var(--color-text);
@@ -36,7 +36,7 @@
 
 /* 描述文字 */
 .workflow__description {
-  font-size: 1.6rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   line-height: 1.6;
   color: var(--color-text-secondary);
   white-space: normal; /* 正常换行 */
@@ -162,8 +162,8 @@
 
 /* 标题样式 - 改为绝对定位 */
 .workflow__card-title {
-  font-size: 1.5rem;
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   color: var(--color-text);
   position: absolute;
   bottom: 80px; /* 和数字同一高度 */
@@ -176,7 +176,7 @@
 
 /* 悬浮时标题稍微下移 */
 .workflow__card:hover .workflow__card-title {
-  bottom: 60px; /* 和数字同步下移到60px */
+    font-family: 'Poppins', sans-serif;bottom: 60px; /* 和数字同步下移到60px */
   left: 68px; /* 保持左边距 */
 }
 
@@ -208,7 +208,7 @@
   }
 
   .workflow__title {
-    font-size: 2.5rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   /* 改用 flex 布局以保留横向放大动画 */
@@ -250,11 +250,11 @@
   }
 
   .workflow__title {
-    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .workflow__description {
-    font-size: 1rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     padding: 0 var(--spacing-md); /* 防止超出 */
   }
 
@@ -300,14 +300,14 @@
 
   /* 调整标题位置 */
   .workflow__card-title {
-    font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     bottom: 60px;
     left: 50px; /* 留出数字空间 */
   }
 
   /* 移除悬浮时标题的下移动画 */
   .workflow__card:hover .workflow__card-title {
-    bottom: 60px; /* 保持不变，不下移 */
+    font-family: 'Poppins', sans-serif;bottom: 60px; /* 保持不变，不下移 */
   }
 
   .workflow__card-content {
@@ -318,11 +318,11 @@
 /* 超小屏优化 */
 @media (max-width: 479px) {
   .workflow__title {
-    font-size: 1.75rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .workflow__description {
-    font-size: 0.9rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   /* 调整卡片间距和内边距 */
@@ -356,14 +356,14 @@
 
   /* 调整标题样式 */
   .workflow__card-title {
-    font-size: 1.1rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     left: 45px;
     bottom: 50px;
   }
 
   /* 移除悬浮时标题的下移动画 */
   .workflow__card:hover .workflow__card-title {
-    bottom: 50px; /* 保持不变，不下移 */
+    font-family: 'Poppins', sans-serif;bottom: 50px; /* 保持不变，不下移 */
   }
 
   /* 调整描述文字 */
