--- a/sections/workflow_sl/workflow_sl.html
+++ b/sections/workflow_sl/workflow_sl.html
@@ -21,8 +21,8 @@
   /* 顶部标签 "WORKFLOW" */
   .workflow-sl-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
@@ -31,8 +31,8 @@
 
   /* 主标题 */
   .workflow-sl-title {
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 2.8rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     color: var(--color-text);
@@ -42,7 +42,7 @@
   /* 副标题/描述 */
   .workflow-sl-description {
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     color: var(--color-text-secondary);
@@ -194,9 +194,9 @@
 
   /* 卡片标题 */
   .workflow-sl-card-title {
-    font-family: 'Sora', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     color: var(--color-text);
     margin-bottom: 0.5rem;
   }
@@ -204,7 +204,7 @@
   /* 卡片描述 */
   .workflow-sl-card-description {
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.5;
     color: var(--color-text-secondary);
@@ -241,11 +241,11 @@
     }
 
     .workflow-sl-title {
-      font-size: clamp(1.5rem, 5vw, 2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .workflow-sl-description {
-      font-size: 0.9rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
       font-weight: 300;
     }
 
@@ -263,11 +263,11 @@
     }
 
     .workflow-sl-card-title {
-      font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .workflow-sl-card-description {
-      font-size: 0.8rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
       font-weight: 300;
     }
   }
