--- a/sections/ROI/ROI.html
+++ b/sections/ROI/ROI.html
@@ -21,17 +21,17 @@
 
 .roi-label {
   font-family: 'Sora', sans-serif;
-  font-size: 1.25rem;
+  font-size: clamp(1rem, 2vw, 1.5rem);
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--color-text-secondary);
   margin-bottom: var(--spacing-sm);
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .roi-title {
-  font-family: 'Sora', sans-serif;
-  font-size: clamp(2rem, 5vw, 3.5rem);
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   color: var(--color-text);
   margin-bottom: var(--spacing-md);
@@ -39,7 +39,7 @@
 }
 
 .roi-subtitle {
-  font-size: clamp(1rem, 2vw, 1.5rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   color: var(--color-text-secondary);
   line-height: 1.6;
   max-width: 900px;
@@ -97,8 +97,8 @@
 
 /* 数字类型说明 */
 .roi-metric-label {
-  font-size: 1rem;
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   color: var(--color-text);
   margin-bottom: var(--spacing-sm);
   line-height: 1.3;
@@ -106,7 +106,7 @@
 
 /* 类型解释 */
 .roi-metric-description {
-  font-size: 0.875rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   color: var(--color-text-secondary);
   line-height: 1.5;
   margin-top: auto;
