--- a/sections/adaptation/adaptation.html
+++ b/sections/adaptation/adaptation.html
@@ -15,17 +15,19 @@
 
 /* 顶部标签 */
 .adaptation-label {
-  font-size: 20px;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1rem, 2vw, 1.5rem);
   letter-spacing: 0px;
   text-transform: uppercase;
   color: #888888;
   margin-bottom: 20px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 /* 主标题 */
 .adaptation-title {
-  font-size: 42px;
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   color: #FFFFFF;
   margin-bottom: 16px;
@@ -34,7 +36,9 @@
 
 /* 副标题 */
 .adaptation-subtitle {
-  font-size: 22px;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   color: #999999;
   margin-bottom: 20px;
   line-height: 1.6;
@@ -179,8 +183,8 @@
 
 /* 卡片标题 */
 .adaptation-card-title {
-  font-size: 24px;
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   color: #FFFFFF;
   margin-bottom: 12px;
   line-height: 1.3;
@@ -188,7 +192,7 @@
 
 /* 卡片描述 */
 .adaptation-card-description {
-  font-size: 21px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   color: #CCCCCC;
   line-height: 1.6;
   margin: 0;
@@ -201,11 +205,15 @@
   }
 
   .adaptation-title {
-    font-size: 36px;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   }
 
   .adaptation-subtitle {
-    font-size: 16px;
+  font-family: 'Sora', sans-serif;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
     margin-bottom: 40px;
   }
 
@@ -230,12 +238,16 @@
   }
 
   .adaptation-title {
-    font-size: 28px;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
     margin-bottom: 12px;
   }
 
   .adaptation-subtitle {
-    font-size: 15px;
+  font-family: 'Sora', sans-serif;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
     margin-bottom: 32px;
   }
 
@@ -252,21 +264,25 @@
   }
 
   .adaptation-card-title {
-    font-size: 20px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .adaptation-card-description {
-    font-size: 14px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 }
 
 @media (max-width: 479px) {
   .adaptation-title {
-    font-size: 24px;
+  font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   }
 
   .adaptation-subtitle {
-    font-size: 14px;
+  font-family: 'Sora', sans-serif;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   }
 
   .adaptation-card-image {
@@ -274,7 +290,7 @@
   }
 
   .adaptation-card-title {
-    font-size: 18px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 }
 </style>
