--- a/sections/brand-control_cmps/brand-control_cmps.html
+++ b/sections/brand-control_cmps/brand-control_cmps.html
@@ -20,8 +20,8 @@
 
   .brand-control-cmps-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
@@ -29,8 +29,8 @@
   }
 
   .brand-control-cmps-title {
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 2.8rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     color: var(--color-text);
@@ -39,7 +39,7 @@
 
   .brand-control-cmps-description {
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     color: var(--color-text-secondary);
@@ -103,9 +103,9 @@
 
   /* 卡片标题 */
   .brand-control-cmps-card-title {
-    font-family: 'Sora', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     color: var(--color-text);
     margin-bottom: var(--spacing-sm);
   }
@@ -113,7 +113,7 @@
   /* 卡片描述 */
   .brand-control-cmps-card-description {
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.5;
     color: var(--color-text-secondary);
@@ -199,11 +199,11 @@
     }
 
     .brand-control-cmps-title {
-      font-size: clamp(1.5rem, 5vw, 2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .brand-control-cmps-description {
-      font-size: 0.9rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     }
 
     .brand-control-cmps-cards {
@@ -218,11 +218,11 @@
     }
 
     .brand-control-cmps-card-title {
-      font-size: 1.25rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .brand-control-cmps-card-description {
-      font-size: 0.8rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     }
   }
 </style>
