--- a/sections/compose/compose.html
+++ b/sections/compose/compose.html
@@ -72,9 +72,9 @@
 
   /* 像素风格标题 - 响应式换行支持 */
   .compose-title {
-    font-family: 'Press Start 2P', cursive;
-    font-size: clamp(1.2rem, 4vw, 2.5rem);
-    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     color: var(--color-text);
     line-height: 1.4;
     margin-bottom: var(--spacing-md);
@@ -91,22 +91,22 @@
   /* 桌面端保持不换行 */
   @media (min-width: 768px) {
     .compose-title {
-      white-space: nowrap;
+    font-family: 'Poppins', sans-serif;white-space: nowrap;
     }
   }
 
   /* 手机端允许换行 */
   @media (max-width: 767px) {
     .compose-title {
-      white-space: normal;
+    font-family: 'Poppins', sans-serif;white-space: normal;
     }
   }
 
-  /* 描述文字 - Sora 细体，减小字号 */
+  /* 描述文字 - Sora Regular 16px */
   .compose-description {
     font-family: 'Sora', sans-serif;
     width: 48%;
-    font-size: clamp(0.85rem, 1.5vw, 1rem);
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     color: var(--color-text);
@@ -157,7 +157,7 @@
     }
 
     .compose-title {
-      font-size: clamp(0.9rem, 5vw, 1.8rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
       letter-spacing: 0.12em;
       margin-bottom: var(--spacing-sm);
       word-wrap: break-word;
@@ -165,7 +165,7 @@
     }
 
     .compose-description {
-      font-size: clamp(0.8rem, 2vw, 0.95rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
       margin-bottom: var(--spacing-md);
     }
   }
@@ -189,7 +189,7 @@
     }
 
     .compose-title {
-      font-size: clamp(0.7rem, 6vw, 1.2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
       letter-spacing: 0.1em;
       line-height: 1.4;
       margin-bottom: var(--spacing-xs);
@@ -198,7 +198,7 @@
     }
 
     .compose-description {
-      font-size: clamp(0.75rem, 2.5vw, 0.85rem);
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
       line-height: 1.5;
       margin-bottom: var(--spacing-md);
     }
