--- a/sections/exp_1/exp_1.html
+++ b/sections/exp_1/exp_1.html
@@ -21,9 +21,9 @@
 
   .exp-1-title {
     color: var(--color-text);
-    font-family: 'Press Start 2P', monospace;
-    font-size: clamp(1.5rem, 3vw, 2.5rem);
-    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     line-height: 1.4;
     margin: 0 0 var(--spacing-md) 0;
     letter-spacing: 0.05em;
@@ -32,8 +32,8 @@
   .exp-1-subtitle {
     color: var(--color-text);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     line-height: 1.6;
     margin: 0;
     max-width: 800px;
