--- a/sections/exp_2/exp_2.html
+++ b/sections/exp_2/exp_2.html
@@ -28,7 +28,7 @@
   .exp-2-category-label {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-weight: 400;
     margin-bottom: var(--spacing-xs);
     text-align: center;
@@ -78,8 +78,8 @@
 
   .exp-2-title {
     color: var(--color-text);
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 3.5rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     margin: 0 0 var(--spacing-sm) 0;
@@ -88,8 +88,8 @@
   .exp-2-subtitle {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     line-height: 1.6;
     margin: 0 0 var(--spacing-lg) 0;
   }
