--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -79,15 +79,15 @@
 }
 
 .footer-brand-subtitle {
-  font-size: 20px;   
-  font-weight: 600;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);   
+  font-weight: 400;
   color: #FFFFFF;      
   line-height: 1.2;   
   margin-top: -4px;
 }
 
 .footer-description {
-  font-size: 14px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   line-height: 1.2;
   color: #FFFFFF;        /* 改为白色字体 */
   margin-bottom: 30px;
@@ -127,8 +127,8 @@
 }
 
 .footer-column-title {
-  font-size: 16px;       /* 增加主分类标题文字大小 */
-  font-weight: 600;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);       /* 增加主分类标题文字大小 */
+  font-weight: 700;
   color: #FFFFFF;
   margin-bottom: 20px;
   letter-spacing: 0.5px;
@@ -260,16 +260,16 @@
   }
 
   .footer-description {
-    font-size: 10px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
   }
 
   .footer-brand-name,
   .footer-brand-subtitle {
-    font-size: 13px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   .footer-column-title {
-    font-size: 11px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   }
 
   .footer-link,
@@ -313,9 +313,9 @@
   }
 
   .footer-description {
-    max-width: 100%;
+    font-family: 'Sora', sans-serif;max-width: 100%;
     margin-left: 0;
-    font-size: 12px;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     line-height: 1.4;
   }
 
@@ -345,7 +345,7 @@
   }
 
   .footer-column-title {
-    font-size: 13px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     margin-bottom: 0.75rem;
   }
 
@@ -380,7 +380,7 @@
 
   .footer-brand-name,
   .footer-brand-subtitle {
-    font-size: 12px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 }
 
@@ -400,17 +400,17 @@
   }
 
   .footer-description {
-    font-size: 10px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     display: none;
   }
 
   .footer-brand-name,
   .footer-brand-subtitle {
-    font-size: 11px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   }
 
   .footer-column-title {
-    font-size: 11px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     margin-bottom: 0.5rem;
   }
 
