--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -255,7 +255,7 @@
 }
 
 .dropdown-title {
-  font-size: 16px;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
   font-weight: 700;
   line-height: 1.2;
   color: var(--color-text);
@@ -264,7 +264,7 @@
 }
 
 .dropdown-subtitle {
-  font-size: 10px;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
   color: rgba(255, 255, 255, 0.6);
   margin: 0;
 }
