--- a/sections/pic_wall/pic_wall.html
+++ b/sections/pic_wall/pic_wall.html
@@ -79,7 +79,7 @@
   .pic-wall-label {
     color: var(--color-text);
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-weight: 400;
     line-height: 1.4;
     text-align: left;
@@ -150,7 +150,7 @@
     }
 
     .pic-wall-label {
-      font-size: 0.8125rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     }
 
     .pic-wall-label-overlay {
@@ -170,7 +170,7 @@
     }
 
     .pic-wall-label {
-      font-size: 0.75rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1rem, 2vw, 1.5rem);
     }
 
     .pic-wall-label-overlay {
