--- a/sections/question/question.html
+++ b/sections/question/question.html
@@ -13,8 +13,9 @@
 }
 
 .question-label {
-  font-size: 19px;
-  font-weight: 600;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   letter-spacing: 0.1px;
   text-transform: uppercase;
   color: var(--color-text-secondary);
@@ -22,15 +23,18 @@
 }
 
 .question-title {
-  font-size: clamp(1.575rem, 3.3vw, 2.625rem);
-  font-weight: 800;
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(2rem, 5vw, 3.75rem);
+  font-weight: 700;
   margin-bottom: var(--spacing-md);
   line-height: 1.2;
   color: var(--color-text);
 }
 
 .question-subtitle {
-  font-size: 1.35rem;
+  font-family: 'Sora', sans-serif;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 400;
   color: var(--color-text-secondary);
   line-height: 1.6;
 }
