--- a/sections/style_cea/style_cea.html
+++ b/sections/style_cea/style_cea.html
@@ -22,7 +22,7 @@
   .style-cea-header-label {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -31,8 +31,8 @@
 
   .style-cea-title {
     color: var(--color-text);
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 3rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     margin: 0 0 var(--spacing-md) 0;
@@ -41,8 +41,8 @@
   .style-cea-subtitle {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     line-height: 1.6;
     margin: 0;
     max-width: 800px;
@@ -115,8 +115,8 @@
 
   .style-cea-card-title {
     color: var(--color-text);
-    font-family: 'Sora', sans-serif;
-    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.4;
     margin: 0 0 var(--spacing-xs) 0;
@@ -126,7 +126,7 @@
   .style-cea-card-description {
     color: var(--color-text-secondary);
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.5;
     margin: 0;
