--- a/sections/workflow_cmps/workflow_cmps.html
+++ b/sections/workflow_cmps/workflow_cmps.html
@@ -20,8 +20,8 @@
 
   .workflow-cmps-label {
     font-family: 'Sora', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--color-text-secondary);
@@ -29,8 +29,8 @@
   }
 
   .workflow-cmps-title {
-    font-family: 'Sora', sans-serif;
-    font-size: clamp(2rem, 4vw, 2.8rem);
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
     font-weight: 700;
     line-height: 1.2;
     color: var(--color-text);
@@ -39,7 +39,7 @@
 
   .workflow-cmps-description {
     font-family: 'Sora', sans-serif;
-    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.6;
     color: var(--color-text-secondary);
@@ -156,9 +156,9 @@
   }
 
   .workflow-cmps-card-title {
-    font-family: 'Sora', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(2rem, 5vw, 3.75rem);
+    font-weight: 700;
     color: var(--color-text);
     line-height: 1;
   }
@@ -166,7 +166,7 @@
   /* 卡片描述 - 在卡片下部，灰色细体 */
   .workflow-cmps-card-description {
     font-family: 'Sora', sans-serif;
-    font-size: 0.875rem;
+    font-size: clamp(1.125rem, 2vw, 1.75rem);
     font-weight: 300;
     line-height: 1.5;
     color: var(--color-text-secondary);
@@ -296,11 +296,11 @@
     }
 
     .workflow-cmps-title {
-      font-size: clamp(1.5rem, 5vw, 2rem);
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .workflow-cmps-description {
-      font-size: 0.9rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     }
 
     .workflow-cmps-content {
@@ -327,11 +327,11 @@
     }
 
     .workflow-cmps-card-title {
-      font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;font-size: clamp(2rem, 5vw, 3.75rem);
     }
 
     .workflow-cmps-card-description {
-      font-size: 0.75rem;
+    font-family: 'Sora', sans-serif;font-size: clamp(1.125rem, 2vw, 1.75rem);
     }
   }
 </style>
